--- a/notebooks/ensemble.ipynb
+++ b/notebooks/ensemble.ipynb
@@ -62,6 +62,9 @@
     "LINEAR_CLASSIFIER_EVAL_PATH = Path(MAX_PATH, 'linear_classifier_evaluation')\n",
     "LINEAR_CLASSIFIER_EVAL_PATH.mkdir(parents=True, exist_ok=True)\n",
     "\n",
+    "MULTIHEAD_EVAL_PATH = Path(MAX_PATH, 'multihead_eval')\n",
+    "MULTIHEAD_EVAL_PATH.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "ORI_PATH = Path(DATA_PATH, 'ori')\n",
     "CLASS_SUBSET_PATH = Path(ORI_PATH, 'class_subset.npy')\n",
     "CLASS_SUBSET = np.load(CLASS_SUBSET_PATH)\n",
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,18 +291,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Linear Binary Classifier\n",
     "class LinearBC(nn.Module):\n",
     "    def __init__(self, input_shape):\n",
+    "        self.num_labels = 2\n",
     "        super(LinearBC,self).__init__()\n",
-    "        self.fc1 = nn.Linear(input_shape,1)\n",
+    "        self.fc1 = nn.Linear(input_shape,2)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = torch.sigmoid(self.fc1(x))\n",
+    "        x = self.fc1(x)\n",
     "        return x"
    ]
   },
@@ -312,68 +316,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#################################################################################################################################\n",
-      "################################################## Training classifier for ori ##################################################\n",
-      "#################################################################################################################################\n",
-      "Epoch: [0]  [  0/126]  eta: 0:08:12  lr: 0.001000  loss: 4.562117 (4.562117)  time: 3.907374  data: 3.410567  max mem: 1723\n",
-      "Epoch: [0]  [ 20/126]  eta: 0:06:16  lr: 0.001000  loss: 0.287717 (1.009202)  time: 3.537406  data: 3.031131  max mem: 1725\n",
-      "Epoch: [0]  [ 40/126]  eta: 0:05:06  lr: 0.001000  loss: 0.127130 (0.577551)  time: 3.580346  data: 3.073099  max mem: 1725\n",
-      "Epoch: [0]  [ 60/126]  eta: 0:03:55  lr: 0.001000  loss: 0.120224 (0.431370)  time: 3.568691  data: 3.064073  max mem: 1725\n",
-      "Epoch: [0]  [ 80/126]  eta: 0:02:43  lr: 0.001000  loss: 0.089167 (0.348410)  time: 3.550090  data: 3.046097  max mem: 1725\n",
-      "Epoch: [0]  [100/126]  eta: 0:01:32  lr: 0.001000  loss: 0.094006 (0.299358)  time: 3.529479  data: 3.023664  max mem: 1725\n",
-      "Epoch: [0]  [120/126]  eta: 0:00:21  lr: 0.001000  loss: 0.083479 (0.265608)  time: 3.570855  data: 3.063783  max mem: 1725\n",
-      "Epoch: [0]  [125/126]  eta: 0:00:03  lr: 0.001000  loss: 0.083299 (0.258620)  time: 3.532491  data: 3.031972  max mem: 1725\n",
-      "Epoch: [0] Total time: 0:07:27 (3.553911 s / it)\n",
-      "Averaged stats: lr: 0.001000  loss: 0.083299 (0.258620)\n",
-      "Test:  [0/5]  eta: 0:00:18  loss: 0.101936 (0.101936)  acc1: 95.703125 (95.703125)  acc5: 100.000000 (100.000000)  time: 3.664612  data: 3.168752  max mem: 1725\n",
-      "Test:  [1/5]  eta: 0:00:15  loss: 0.101936 (0.116585)  acc1: 95.703125 (95.898438)  acc5: 99.609375 (99.804688)  time: 3.901068  data: 3.396126  max mem: 1725\n",
-      "Test:  [2/5]  eta: 0:00:11  loss: 0.115332 (0.116167)  acc1: 96.093750 (96.223958)  acc5: 100.000000 (99.869792)  time: 3.958859  data: 3.453350  max mem: 1725\n",
-      "Test:  [3/5]  eta: 0:00:07  loss: 0.109823 (0.114581)  acc1: 95.703125 (96.093750)  acc5: 100.000000 (99.902344)  time: 3.950292  data: 3.442060  max mem: 1725\n",
-      "Test:  [4/5]  eta: 0:00:03  loss: 0.109823 (0.100968)  acc1: 96.093750 (96.480000)  acc5: 100.000000 (99.920000)  time: 3.840405  data: 3.342698  max mem: 1725\n",
-      "Test: Total time: 0:00:19 (3.841068 s / it)\n",
-      "* Acc@1 96.480 Acc@5 99.920 loss 0.101\n",
-      "Accuracy at epoch 0 of the network on the 5 test images: 96.5%\n",
-      "Max accuracy so far: 96.48%\n",
-      "Training of the supervised linear classifier on frozen features completed.\n",
-      "Top-1 test accuracy: 96.5\n",
-      "Finished Training classifier on ori\n",
-      "################################################################################################################################\n",
-      "################################################## Training classifier for cw ##################################################\n",
-      "################################################################################################################################\n",
-      "Epoch: [0]  [  0/126]  eta: 0:32:55  lr: 0.001000  loss: 4.467798 (4.467798)  time: 15.682453  data: 15.169256  max mem: 1725\n",
-      "Epoch: [0]  [ 20/126]  eta: 0:27:52  lr: 0.001000  loss: 0.829293 (1.595452)  time: 15.787837  data: 15.282030  max mem: 1725\n",
-      "Epoch: [0]  [ 40/126]  eta: 0:22:32  lr: 0.001000  loss: 0.437458 (1.029341)  time: 15.669223  data: 15.164578  max mem: 1725\n",
-      "Epoch: [0]  [ 60/126]  eta: 0:17:23  lr: 0.001000  loss: 0.359102 (0.812719)  time: 15.973701  data: 15.470289  max mem: 1725\n",
-      "Epoch: [0]  [ 80/126]  eta: 0:12:01  lr: 0.001000  loss: 0.307235 (0.689295)  time: 15.275537  data: 14.768333  max mem: 1725\n",
-      "Epoch: [0]  [100/126]  eta: 0:06:43  lr: 0.001000  loss: 0.292956 (0.612036)  time: 14.882878  data: 14.375455  max mem: 1725\n",
-      "Epoch: [0]  [120/126]  eta: 0:01:32  lr: 0.001000  loss: 0.284346 (0.558872)  time: 14.752380  data: 14.247301  max mem: 1725\n",
-      "Epoch: [0]  [125/126]  eta: 0:00:15  lr: 0.001000  loss: 0.266769 (0.546774)  time: 14.526029  data: 14.026741  max mem: 1725\n",
-      "Epoch: [0] Total time: 0:32:11 (15.329673 s / it)\n",
-      "Averaged stats: lr: 0.001000  loss: 0.266769 (0.546774)\n",
-      "Test:  [0/5]  eta: 0:01:11  loss: 0.270694 (0.270694)  acc1: 92.578125 (92.578125)  acc5: 99.218750 (99.218750)  time: 14.314344  data: 13.798774  max mem: 1725\n",
-      "Test:  [1/5]  eta: 0:00:56  loss: 0.270694 (0.276679)  acc1: 90.234375 (91.406250)  acc5: 98.828125 (99.023438)  time: 14.191493  data: 13.676767  max mem: 1725\n",
-      "Test:  [2/5]  eta: 0:00:42  loss: 0.270694 (0.259260)  acc1: 91.796875 (91.536458)  acc5: 99.218750 (99.348958)  time: 14.198419  data: 13.683290  max mem: 1725\n",
-      "Test:  [3/5]  eta: 0:00:28  loss: 0.262526 (0.260077)  acc1: 90.234375 (91.113281)  acc5: 99.218750 (99.316406)  time: 14.163267  data: 13.648511  max mem: 1725\n",
-      "Test:  [4/5]  eta: 0:00:13  loss: 0.262526 (0.246259)  acc1: 91.796875 (91.520000)  acc5: 99.218750 (99.359999)  time: 13.676867  data: 13.174627  max mem: 1725\n",
-      "Test: Total time: 0:01:08 (13.677570 s / it)\n",
-      "* Acc@1 91.520 Acc@5 99.360 loss 0.246\n",
-      "Accuracy at epoch 0 of the network on the 5 test images: 91.5%\n",
-      "Max accuracy so far: 91.52%\n",
-      "Training of the supervised linear classifier on frozen features completed.\n",
-      "Top-1 test accuracy: 91.5\n",
-      "Finished Training classifier on cw\n",
-      "Skipping for fgsm_06\n",
-      "Skipping for pgd_03\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "run_attacks = [\n",
     "            \"ori\", \n",
@@ -503,38 +448,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearClassifier(\n",
+       "  (linear): Linear(in_features=1536, out_features=25, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load clean_classifier\n",
-    "name=\"clean\"\n",
     "clean_classifier = LinearClassifier(linear_classifier.linear.in_features, \n",
     "                                    num_labels=len(CLASS_SUBSET))\n",
     "clean_classifier.to(DEVICE)\n",
     "\n",
-    "log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, \"ori\")\n",
-    "to_restore={'epoch': 1}\n",
-    "utils.restart_from_checkpoint(\n",
-    "    Path(log_dir, \"checkpoint.pth.tar\"),\n",
-    "    run_variables=to_restore,\n",
-    "    state_dict=clean_classifier\n",
-    ")"
+    "clean_classifier.load_state_dict(torch.load(\"/cluster/scratch/mmathys/dl_data/adversarial_data/adv_classifiers/25_classes\" + \"/\" + \"clean.pt\"))\n",
+    "clean_classifier.cuda()\n",
+    "\n",
+    "# log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, version, \"ori\")\n",
+    "# to_restore={'epoch': 1}\n",
+    "# utils.restart_from_checkpoint(\n",
+    "#     Path(log_dir, \"checkpoint.pth.tar\"),\n",
+    "#     run_variables=to_restore,\n",
+    "#     state_dict=clean_classifier\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found checkpoint at /cluster/scratch/mmathys/dl_data/posthoc_models/cw/checkpoint.pth.tar\n",
+      "=> loaded 'state_dict' from checkpoint '/cluster/scratch/mmathys/dl_data/posthoc_models/cw/checkpoint.pth.tar' with msg <All keys matched successfully>\n",
+      "Found checkpoint at /cluster/scratch/mmathys/dl_data/linear_classifier_models/last_hope/cw/checkpoint.pth.tar\n",
+      "=> loaded 'state_dict' from checkpoint '/cluster/scratch/mmathys/dl_data/linear_classifier_models/last_hope/cw/checkpoint.pth.tar' with msg <All keys matched successfully>\n",
+      "##################################################################################################################\n",
+      "############################## Validating Posthoc: cw and adv_classifier: cw on ori ##############################\n",
+      "##################################################################################################################\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'true_labels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-895e5b955bd8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     37\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m\"#\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m             log_dict, logger = validate_multihead_network(model, \n\u001b[0m\u001b[1;32m     40\u001b[0m                                                           \u001b[0mposthoc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m                                                           \u001b[0madv_classifier\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/AADefDINO/src/model/multihead_model.py\u001b[0m in \u001b[0;36mvalidate_multihead_network\u001b[0;34m(model, posthoc, adv_classifier, clean_classifier, validation_loader, tensor_dir, adversarial_attack, n, avgpool, path_predictions)\u001b[0m\n\u001b[1;32m    107\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpath_predictions\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m             \u001b[0mnames\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 109\u001b[0;31m             \u001b[0mtrue_labels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    110\u001b[0m             \u001b[0mpredicted_labels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0madversarial_attack\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'true_labels' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Load posthoc\n",
-    "posthocs=[\"cw\", \"fgsm_06\", \"pgd_03\"]\n",
-    "\n",
-    "adv_models = [\"cw\", \"fgsm_06\", \"pgd_03\"]\n",
+    "attacks=[\"cw\", \"fgsm_06\", \"pgd_03\"]\n",
     "\n",
     "# Perform validation on clean dataset\n",
-    "for post_model in posthocs:\n",
+    "for post_model in attacks:\n",
     "    \n",
     "    log_dir = Path(POSTHOC_MODELS_PATH, post_model)\n",
     "    \n",
@@ -547,12 +531,12 @@
     "        state_dict=posthoc\n",
     "    )\n",
     "    \n",
-    "    for adv_model in adv_models:\n",
+    "    for adv_model in attacks:\n",
     "        adv_classifier = LinearClassifier(linear_classifier.linear.in_features, \n",
     "                                          num_labels=len(CLASS_SUBSET))\n",
     "        adv_classifier.to(DEVICE)\n",
     "        \n",
-    "        log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, \"adv_model\")\n",
+    "        log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, version, adv_model)\n",
     "        to_restore={'epoch': 1}\n",
     "        \n",
     "        utils.restart_from_checkpoint(\n",
@@ -562,10 +546,12 @@
     "        )\n",
     "        \n",
     "        for attack, loaders in loader_dict.items():\n",
+    "            \n",
     "            pstr = \"#\"*30 + f''' Validating Posthoc: {post_model} and adv_classifier: {adv_model} on {attack} ''' + \"#\"*30\n",
     "            print(len(pstr)*\"#\")\n",
     "            print(pstr)\n",
     "            print(len(pstr)*\"#\")\n",
+    "            \n",
     "            log_dict, logger = validate_multihead_network(model, \n",
     "                                                          posthoc,\n",
     "                                                          adv_classifier,\n",
@@ -574,15 +560,24 @@
     "                                                          tensor_dir=None, \n",
     "                                                          adversarial_attack=None, \n",
     "                                                          n=4, \n",
-    "                                                          avgpool=False)\n",
+    "                                                          avgpool=False,\n",
+    "                                                          path_predictions=Path(MULTIHEAD_EVAL_PATH, 'labels_p_'+ post_model +'_c_'+adv_model+'_d_'+attack+'.csv')\n",
+    "                                                         )\n",
     "            \n",
     "            # Save adversarial Classifier\n",
-    "            save_path = Path(ADVERSARIAL_CLASSIFIER_MODEL_SAVE_PATH, version, \"benchmark\")\n",
-    "            if not os.path.isdir(save_path):\n",
-    "                os.makedirs(save_path)\n",
-    "            save_file_log = f\"log_post{post_model}_adv{adv_model}_attack{attack}.pt\"\n",
-    "            torch.save(logger, str(save_path) + \"/\" + save_file_log)\n",
-    "            "
+    "            save_path = Path(MULTIHEAD_EVAL_PATH, version)\n",
+    "            save_path.mkdir(parents=True, exist_ok=True)\n",
+    "            save_file_log = f\"log_p_{post_model}_c_{adv_model}_d_{attack}.pt\"\n",
+    "            torch.save(logger, Path(save_path, save_file_log))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Path(POSTHOC_MODELS_PATH, 'post_model')"
    ]
   },
   {
