--- a/notebooks/p_classifier_forward.ipynb
+++ b/notebooks/p_classifier_forward.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ori', 'fgsm_06']\n"
+      "['ori', 'cw', 'fgsm_06', 'pgd_03']\n"
      ]
     }
    ],
@@ -55,29 +55,13 @@
     "BASE_ADV_PATH = Path(MAX_PATH, 'adversarial_data_tensors')\n",
     "BASE_POSTHOC_PATH = Path(MAX_PATH, 'posthoc_tensors')\n",
     "\n",
-    "ORI_PATH = Path(DATA_PATH, 'ori_data')\n",
+    "ORI_PATH = Path(DATA_PATH, 'ori')\n",
     "CLASS_SUBSET_PATH = Path(ORI_PATH, 'class_subset.npy')\n",
     "CLASS_SUBSET = np.load(CLASS_SUBSET_PATH)\n",
     "\n",
     "ADV_DATASETS = ['cw', 'fgsm_06', 'pgd_03']\n",
-    "ADV_DATASETS = ['fgsm_06']\n",
     "DATASETS = ['ori', *ADV_DATASETS]\n",
     "print(DATASETS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "INDEX_SUBSET = None\n",
-    "NUM_WORKERS= 0\n",
-    "PIN_MEMORY=True\n",
-    "\n",
-    "BATCH_SIZE = 64\n",
-    "\n",
-    "DEVICE = 'cuda'"
    ]
   },
   {
@@ -99,6 +83,21 @@
     "                 posthoc_base_path=BASE_POSTHOC_PATH, \n",
     "                 train_str='train', \n",
     "                 val_str='validation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INDEX_SUBSET = None\n",
+    "NUM_WORKERS= 0\n",
+    "PIN_MEMORY=True\n",
+    "\n",
+    "BATCH_SIZE = 64\n",
+    "\n",
+    "DEVICE = 'cuda'"
    ]
   },
   {
@@ -232,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +311,29 @@
       "Test:  [300/503]  eta: 0:16:15  loss: 6.004921 (6.145701)  acc1: 9.375000 (8.970100)  acc5: 45.312500 (44.414452)  time: 4.597104  data: 4.320910  max mem: 498\n",
       "Test:  [320/503]  eta: 0:14:37  loss: 6.015760 (6.139264)  acc1: 9.375000 (9.000195)  acc5: 43.750000 (44.358450)  time: 4.622904  data: 4.350305  max mem: 498\n",
       "Test:  [340/503]  eta: 0:13:00  loss: 6.023014 (6.144090)  acc1: 7.812500 (8.967192)  acc5: 46.875000 (44.437317)  time: 4.705707  data: 4.433266  max mem: 498\n",
-      "Test:  [360/503]  eta: 0:11:24  loss: 6.056786 (6.144690)  acc1: 9.375000 (8.972472)  acc5: 43.750000 (44.494460)  time: 4.711331  data: 4.436556  max mem: 498\n"
+      "Test:  [360/503]  eta: 0:11:24  loss: 6.056786 (6.144690)  acc1: 9.375000 (8.972472)  acc5: 43.750000 (44.494460)  time: 4.711331  data: 4.436556  max mem: 498\n",
+      "Test:  [380/503]  eta: 0:09:48  loss: 6.076167 (6.143154)  acc1: 7.812500 (8.932087)  acc5: 42.187500 (44.393865)  time: 4.838128  data: 4.563631  max mem: 498\n",
+      "Test:  [400/503]  eta: 0:08:13  loss: 6.194893 (6.145805)  acc1: 9.375000 (8.895729)  acc5: 43.750000 (44.346166)  time: 4.835715  data: 4.560523  max mem: 498\n",
+      "Test:  [420/503]  eta: 0:06:37  loss: 6.169906 (6.150094)  acc1: 7.812500 (8.810867)  acc5: 42.187500 (44.306710)  time: 4.857680  data: 4.579129  max mem: 498\n",
+      "Test:  [440/503]  eta: 0:05:01  loss: 6.196063 (6.151898)  acc1: 7.812500 (8.758503)  acc5: 43.750000 (44.267290)  time: 4.819240  data: 4.543911  max mem: 498\n",
+      "Test:  [460/503]  eta: 0:03:26  loss: 6.195980 (6.153002)  acc1: 10.937500 (8.798807)  acc5: 45.312500 (44.292299)  time: 4.886807  data: 4.610480  max mem: 498\n",
+      "Test:  [480/503]  eta: 0:01:50  loss: 6.273192 (6.156397)  acc1: 7.812500 (8.751299)  acc5: 43.750000 (44.266502)  time: 4.905675  data: 4.623668  max mem: 498\n",
+      "Test:  [500/503]  eta: 0:00:14  loss: 6.111912 (6.154139)  acc1: 9.375000 (8.801148)  acc5: 43.750000 (44.295783)  time: 5.036376  data: 4.752702  max mem: 498\n",
+      "Test:  [502/503]  eta: 0:00:04  loss: 6.112590 (6.157193)  acc1: 7.812500 (8.781579)  acc5: 42.187500 (44.265250)  time: 4.939762  data: 4.658198  max mem: 498\n",
+      "Test: Total time: 0:40:18 (4.807581 s / it)\n",
+      "* Acc@1 8.782 Acc@5 44.265 loss 6.157\n",
+      "images: /cluster/scratch/mmathys/dl_data/adversarial_data_tensors/fgsm_06/validation/images\n",
+      "label: /cluster/scratch/mmathys/dl_data/adversarial_data_tensors/fgsm_06/validation/labels.csv\n",
+      "pred: /cluster/scratch/mmathys/dl_data/posthoc_tensors/fgsm_06/validation/labels.csv\n",
+      "fgsm_06: validation 1250\n",
+      "saving predictions to: /cluster/scratch/mmathys/dl_data/posthoc_tensors/fgsm_06/validation/labels.csv\n",
+      "Test:  [ 0/20]  eta: 0:01:40  loss: 6.089995 (6.089995)  acc1: 7.812500 (7.812500)  acc5: 43.750000 (43.750000)  time: 5.035820  data: 4.747051  max mem: 498\n",
+      "Test:  [ 5/20]  eta: 0:01:15  loss: 6.406136 (6.519743)  acc1: 9.375000 (9.635417)  acc5: 43.750000 (44.791667)  time: 5.010678  data: 4.728120  max mem: 498\n",
+      "Test:  [10/20]  eta: 0:00:50  loss: 6.406136 (6.305566)  acc1: 9.375000 (9.517045)  acc5: 45.312500 (45.454545)  time: 5.080170  data: 4.792235  max mem: 498\n",
+      "Test:  [15/20]  eta: 0:00:25  loss: 6.262640 (6.192254)  acc1: 9.375000 (9.472656)  acc5: 43.750000 (45.605469)  time: 5.073564  data: 4.786459  max mem: 498\n",
+      "Test:  [19/20]  eta: 0:00:04  loss: 6.342644 (6.285185)  acc1: 9.375000 (9.360000)  acc5: 43.750000 (45.120000)  time: 4.884581  data: 4.606879  max mem: 498\n",
+      "Test: Total time: 0:01:37 (4.884824 s / it)\n",
+      "* Acc@1 9.360 Acc@5 45.120 loss 6.285\n"
      ]
     }
    ],
@@ -324,29 +345,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create Labels"
+    "# Create Label files and store them:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +371,6 @@
     "        df_data[tv] = {}\n",
     "        for ds in datasets:\n",
     "            ds_dict = datasets_paths[ds]\n",
-    "            print(ds)\n",
     "            df_data[tv][ds] = pd.read_csv(ds_dict['posthoc'][tv]['label'])\n",
     "            df_data[tv][ds].rename(columns = {'pred_labels': ds+'_pred'}, inplace = True)\n",
     "            if ds != 'ori':\n",
@@ -383,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,65 +397,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "for name in ADV_DATASETS:    \n",
-    "    df = df_data['train'][name]\n",
-    "    print(f'''{name}''')\n",
-    "    ldf = len(df)\n",
-    "    print(f'''total data:             {ldf}''')\n",
-    "    print(f'''correct pred:           {len(df[df['true_labels']==df['ori_pred']])},   {len(df[df['true_labels']==df['ori_pred']])/ldf}''')\n",
-    "    print(f'''incorrect adv pred:     {len(df[df['true_labels']!=df[name+'_pred']])},   {len(df[df['true_labels']!=df[name+'_pred']])/ldf}''')\n",
-    "    df_f = df[df['true_labels']==df['ori_pred']]\n",
-    "    print(f'''number adv tuples:      {len(df_f[df_f['true_labels']!=df_f[name+'_pred']])},   {len(df_f[df_f['true_labels']!=df_f[name+'_pred']])/ldf}''')\n",
-    "    print(f'''\\n''')"
+    "# Some Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "cw:\n",
+      "    train:\n",
+      "        total data:             32181\n",
+      "        correct pred:           31848,   0.9896522792952364\n",
+      "        incorrect adv pred:     32145,   0.9988813274913769\n",
+      "        number adv tuples:      31812,   0.9885336067866132\n",
+      "    validation:\n",
+      "        total data:             1250\n",
+      "        correct pred:           1215,   0.972\n",
+      "        incorrect adv pred:     1249,   0.9992\n",
+      "        number adv tuples:      1214,   0.9712\n",
+      "\n",
+      "fgsm_06:\n",
+      "    train:\n",
+      "        total data:             32181\n",
+      "        correct pred:           31848,   0.9896522792952364\n",
+      "        incorrect adv pred:     29355,   0.9121842080730866\n",
+      "        number adv tuples:      29023,   0.9018675616046735\n",
+      "    validation:\n",
+      "        total data:             1250\n",
+      "        correct pred:           1215,   0.972\n",
+      "        incorrect adv pred:     1133,   0.9064\n",
+      "        number adv tuples:      1098,   0.8784\n",
+      "\n",
+      "pgd_03:\n",
+      "    train:\n",
+      "        total data:             32181\n",
+      "        correct pred:           31848,   0.9896522792952364\n",
+      "        incorrect adv pred:     32181,   1.0\n",
+      "        number adv tuples:      31848,   0.9896522792952364\n",
+      "    validation:\n",
+      "        total data:             1250\n",
+      "        correct pred:           1215,   0.972\n",
+      "        incorrect adv pred:     1250,   1.0\n",
+      "        number adv tuples:      1215,   0.972\n"
+     ]
+    }
+   ],
    "source": [
-    "cw_df = pd.read_csv('/cluster/home/thobauma/deeplearning/data-mmathys/adversarial_data_test/cw/train/labels.txt', sep=\" \", header=None)\n",
-    "cw_df.columns=['file', 'label']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cw_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cw_stuff = pd.merge(cw_df, df_data['train']['cw'], how='left', suffixes=('', '_post'), on=['file'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cw_stuff"
+    "for name in ADV_DATASETS:   \n",
+    "    print(f'''\\n{name}:''')\n",
+    "    for tv in ['train', 'validation']: \n",
+    "        print(f'    {tv}:')\n",
+    "        df = df_data[tv][name]\n",
+    "\n",
+    "        ldf = len(df)\n",
+    "        print(f'''        total data:             {ldf}''')\n",
+    "        print(f'''        correct pred:           {len(df[df['true_labels']==df['ori_pred']])},   {len(df[df['true_labels']==df['ori_pred']])/ldf}''')\n",
+    "        print(f'''        incorrect adv pred:     {len(df[df['true_labels']!=df[name+'_pred']])},   {len(df[df['true_labels']!=df[name+'_pred']])/ldf}''')\n",
+    "        df_f = df[df['true_labels']==df['ori_pred']]\n",
+    "        print(f'''        number adv tuples:      {len(df_f[df_f['true_labels']!=df_f[name+'_pred']])},   {len(df_f[df_f['true_labels']!=df_f[name+'_pred']])/ldf}''')\n"
    ]
   },
   {
