--- a/notebooks/p_classifier_train.ipynb
+++ b/notebooks/p_classifier_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,28 +41,13 @@
     "BASE_POSTHOC_PATH = Path(MAX_PATH, 'posthoc_tensors')\n",
     "POSTHOC_MODELS_PATH = Path(MAX_PATH, 'posthoc_models')\n",
     "\n",
-    "ORI_PATH = Path(DATA_PATH, 'ori_data')\n",
+    "ORI_PATH = Path(DATA_PATH, 'ori')\n",
     "CLASS_SUBSET_PATH = Path(ORI_PATH, 'class_subset.npy')\n",
     "CLASS_SUBSET = np.load(CLASS_SUBSET_PATH)\n",
     "\n",
     "ADV_DATASETS = ['cw', 'fgsm_06', 'pgd_03']\n",
     "\n",
-    "DATASETS = [*ADV_DATASETS, 'ori_data']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "INDEX_SUBSET = None\n",
-    "NUM_WORKERS= 0\n",
-    "PIN_MEMORY=True\n",
-    "\n",
-    "BATCH_SIZE = 256\n",
-    "EPOCHS= 3\n",
-    "DEVICE = 'cuda'"
+    "DATASETS = [*ADV_DATASETS, 'ori']"
    ]
   },
   {
@@ -84,6 +69,21 @@
     "                 posthoc_base_path=BASE_POSTHOC_PATH, \n",
     "                 train_str='train', \n",
     "                 val_str='validation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INDEX_SUBSET = None\n",
+    "NUM_WORKERS= 0\n",
+    "PIN_MEMORY=True\n",
+    "\n",
+    "BATCH_SIZE = 256\n",
+    "EPOCHS= 3\n",
+    "DEVICE = 'cuda'"
    ]
   },
   {
@@ -146,11 +146,10 @@
     "def train_posthoc_classifier(adv_datasets, dataset_paths, epochs=EPOCHS):\n",
     "    logger_dict = {}\n",
     "    for ds in adv_datasets:\n",
-    "        ds_p = dataset_paths[ds]['posthoc']\n",
     "        print(\"#\"*50 + f''' training linear classifier for {ds} ''' + \"#\"*50)\n",
     "        # loaders\n",
     "        ori_train = dataset_paths['ori']['posthoc']['train']['images']\n",
-    "        adv_train = ds_p['train']['images']\n",
+    "        adv_train = dataset_paths[ds]['posthoc']['train']['images']\n",
     "        print(f'''original images: {ori_train}''')\n",
     "        print(f'''adversarial images: {adv_train}''')\n",
     "        train_set = PosthocTrainDataset(ori_train, adv_train, train_dfs[ds])\n",
@@ -158,7 +157,7 @@
     "        \n",
     "        \n",
     "        ori_validation = dataset_paths['ori']['posthoc']['validation']['images']\n",
-    "        adv_validation = ds_p['validation']['images']\n",
+    "        adv_validation = dataset_paths[ds]['posthoc']['validation']['images']\n",
     "        print(f'''original images: {ori_validation}''')\n",
     "        print(f'''adversarial images: {adv_validation}''')\n",
     "        val_set = PosthocTrainDataset(ori_validation, adv_validation, val_dfs[ds])\n",
@@ -201,118 +200,6 @@
    "source": [
     "loggers = train_posthoc_classifier(['cw'], DATA_PATHS, 5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "class AdvDataset(torch.utils.data.Dataset):\n",
-    "    def __init__(self, or_img_folder, adv_img_folder, index_df):\n",
-    "        super().__init__()\n",
-    "        self.or_img_folder = or_img_folder\n",
-    "        self.adv_img_folder = adv_img_folder\n",
-    "        self.index_df = index_df\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        return len(self.index_df)*2\n",
-    "    \n",
-    "    def __getitem__(self, index):            \n",
-    "        filename = self.index_df['file'].iloc[index%len(self.index_df)]\n",
-    "        filename = filename.split('.')[0]+'.pt'\n",
-    "        if index >= len(self.index_df):\n",
-    "            payload = torch.load(Path(self.or_img_folder, filename)).cpu()\n",
-    "            label = 0 #torch.tensor(0, dtype=torch.float32)\n",
-    "        else:\n",
-    "            payload = torch.load(Path(self.adv_img_folder, filename)).cpu()\n",
-    "            label = 1 #torch.tensor(1, dtype=torch.float32)\n",
-    "        return payload, label, filename"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "log_dir = Path(POSTHOC_MODELS_PATH,'fgsm_06')\n",
-    "classifier = LinearBC(1536)\n",
-    "classifier.cuda()\n",
-    "\n",
-    "to_restore={'epoch':3}\n",
-    "\n",
-    "utils.restart_from_checkpoint(\n",
-    "    Path(log_dir, \"checkpoint.pth.tar\"),\n",
-    "    run_variables=to_restore,\n",
-    "    state_dict=classifier\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
