fixed some paths

--- a/notebooks/createDataSubset.ipynb
+++ b/notebooks/createDataSubset.ipynb
@@ -51,16 +51,16 @@
     "DN_IMAGES_PATH = Path(DN_PATH, 'images')\n",
     "\n",
     "# Image Net\n",
-    "ORI_PATH = Path(DATA_PATH, 'ori_data')\n",
+    "ORI_PATH = Path(DATA_PATH, 'ori')\n",
     "CLASS_SUBSET_PATH = Path(ORI_PATH, 'class_subset.npy')\n",
     "\n",
     "VAL_PATH = Path(ORI_PATH, 'validation')\n",
     "VAL_IMAGES_PATH = Path(VAL_PATH,'images')\n",
-    "VAL_LABEL_PATH = Path(VAL_PATH, 'correct_labels.txt')\n",
+    "VAL_LABEL_PATH = Path(VAL_PATH, 'labels.csv')\n",
     "\n",
     "TRAIN_PATH = Path(ORI_PATH, 'train')\n",
     "TRAIN_IMAGES_PATH = Path(TRAIN_PATH,'images')\n",
-    "TRAIN_LABEL_PATH = Path(TRAIN_PATH, 'correct_labels.txt')"
+    "TRAIN_LABEL_PATH = Path(TRAIN_PATH, 'labels.csv')"
    ]
   },
   {
