--- a/notebooks/get_train_labels.ipynb
+++ b/notebooks/get_train_labels.ipynb
@@ -16,9 +16,9 @@
     "DN_LABEL_PATH = Path(DN_PATH, 'val_damagenet.txt')\n",
     "DN_IMAGES_PATH = Path(DN_PATH, 'images')\n",
     "\n",
-    "ORI_PATH = Path(DATA_PATH, 'ori_data')\n",
+    "ORI_PATH = Path(DATA_PATH, 'ori')\n",
     "\n",
-    "ORI_LABEL_PATH = Path(ORI_PATH,'correct_labels.txt')\n",
+    "ORI_LABEL_PATH = Path(ORI_PATH,'labels.csv')\n",
     "ORI_IMAGES_PATH = Path(ORI_PATH,'train','images')"
    ]
   },
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tt.to_csv(Path(ORI_PATH, 'train', 'correct_labels.txt'), sep=' ', index=False, header=False)"
+    "tt.to_csv(Path(ORI_PATH, 'train', 'labels.csv'), sep=' ', index=False, header=False)"
    ]
   },
   {
