--- a/notebooks/AdversarialBenchmark.ipynb
+++ b/notebooks/AdversarialBenchmark.ipynb
@@ -56,7 +56,8 @@
     "np.random.seed(SEED)\n",
     "\n",
     "username = getpass.getuser()\n",
-    "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
+    "DATA_PATH = Path('..', 'data_dir')\n",
+    "MAX_PATH = DATA_PATH\n",
     "\n",
     "ORI_PATH = Path(DATA_PATH, 'ori/validation')\n",
     "ORI_LABEL_PATH = Path(ORI_PATH,'labels.csv')\n",
