--- a/notebooks/ensemble.ipynb
+++ b/notebooks/ensemble.ipynb
@@ -50,8 +50,8 @@
     "torch.manual_seed(SEED)\n",
     "np.random.seed(SEED)\n",
     "\n",
-    "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
-    "MAX_PATH = Path('/','cluster', 'scratch', 'mmathys', 'dl_data')\n",
+    "DATA_PATH = Path('..', 'data_dir')\n",
+    "MAX_PATH = DATA_PATH\n",
     "\n",
     "BASE_ADV_PATH = Path(MAX_PATH, 'adversarial_data_tensors')\n",
     "BASE_POSTHOC_PATH = Path(MAX_PATH, 'posthoc_tensors')\n",
