--- a/notebooks/get_train_labels.ipynb
+++ b/notebooks/get_train_labels.ipynb
@@ -9,7 +9,8 @@
     "import scipy.io\n",
     "from pathlib import Path\n",
     "from typing import Optional\n",
-    "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
+    "DATA_PATH = Path('..', 'data_dir')\n",
+    "MAX_PATH = DATA_PATH\n",
     "LOG_PATH = Path(DATA_PATH, 'logs')\n",
     "\n",
     "DN_PATH = Path(DATA_PATH, 'damageNet')\n",
