--- a/notebooks/createDataSubset.ipynb
+++ b/notebooks/createDataSubset.ipynb
@@ -40,8 +40,8 @@
     "torch.manual_seed(SEED)\n",
     "np.random.seed(SEED)\n",
     "\n",
-    "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
-    "MAX_PATH = Path('/','cluster', 'scratch', 'mmathys', 'dl_data')\n",
+    "DATA_PATH = Path('..', 'data_dir')\n",
+    "MAX_PATH = DATA_PATH\n",
     "\n",
     "LOG_PATH = Path(MAX_PATH, 'logs')\n",
     "\n",
