paths to the 26 label classifier

--- a/notebooks/p_classifier_forward.ipynb
+++ b/notebooks/p_classifier_forward.ipynb
@@ -157,7 +157,7 @@
     "linear_classifier = LinearClassifier(dino_classifier.linear.in_features, \n",
     "                         num_labels=len(CLASS_SUBSET))\n",
     "\n",
-    "linear_classifier.load_state_dict(torch.load(\"/cluster/scratch/mmathys/dl_data/adversarial_data/adv_classifiers/25_classes\" + \"/\" + \"clean.pt\"))\n",
+    "linear_classifier.load_state_dict(torch.load(Path(DATA_PATH,'adversarial_data','adv_classifiers','25_classes','clean.pt')))\n",
     "linear_classifier.cuda()\n",
     "\n",
     "\n",
