--- a/notebooks/ensemble.ipynb
+++ b/notebooks/ensemble.ipynb
@@ -581,7 +581,7 @@
     "                                    num_labels=len(CLASS_SUBSET))\n",
     "clean_classifier.to(DEVICE)\n",
     "\n",
-    "clean_classifier.load_state_dict(torch.load(\"/cluster/scratch/mmathys/dl_data/adversarial_data/adv_classifiers/25_classes\" + \"/\" + \"clean.pt\"))\n",
+    "clean_classifier.load_state_dict(torch.load(Path(DATA_PATH,'adversarial_data','adv_classifiers','25_classes','clean.pt')))\n",
     "clean_classifier.cuda()\n"
    ]
   },
